# ProjectGenerator

./: CMakeLists.txt  README.md  script.sh  script.sh.x.c
script/: script.bat  script.sh  script.sh.x  script.sh.x.c
src/: main.c
